fix/login-companyId

--- a/src/views/BF/BF6/BF620/style/style.scss
+++ b/src/views/BF/BF6/BF620/style/style.scss
@@ -24,4 +24,7 @@
   :deep .custom-sumary {
     white-space: break-spaces;
   }
+  // :deep .dx-button-has-text .dx-button-content {
+  //   padding: 0 10px;
+  // }
 }
