--- a/src/views/CM/CM1/CM130/style/style.scss
+++ b/src/views/CM/CM1/CM130/style/style.scss
@@ -24,3 +24,10 @@
 //     color: white!important;
 //     // cursor: pointer; 
 // } 
+.btn-date {
+  height: 25px;
+
+  .dx-button-content {
+    padding: 0 10px;
+  }
+}
