--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,3 @@
-// grid scss
 $fontSize : 13;
 
 .dx-datagrid-headers .dx-header-row {
@@ -187,4 +186,12 @@ input,
 label,
 table {
   font-size: $fontSize+px;
+}
+
+.btn-date {
+  height: 25px;
+
+  .dx-button-content {
+    padding: 0 10px;
+  }
 }
