--- a/src/assets/styles/customStyle.scss
+++ b/src/assets/styles/customStyle.scss
@@ -3,9 +3,12 @@
 }
 
 .ant-form-item {
-  margin-bottom: 1px;
+  margin-bottom: $margin-bottom+px;
 }
 
+.ant-form-item-control-input {
+  min-height: $min-height+px;
+}
 .ant-tooltip-inner {
   color: white !important;
 }
@@ -17,6 +20,7 @@
 .dx-texteditor-input {
   margin: 0;
   padding: 5px;
+  min-height: $min-height+px;
 }
 
 .dx-datagrid-header-panel .dx-toolbar {
@@ -28,7 +32,7 @@
 }
 
 .dp__input{
-  padding: 2px 0px 1px 36px;
+  padding: 2px 0px 1px 36px !important;
 }
 .dp__input_icon_pad{
   padding: 2px 0px 1px 36px;
