--- a/src/views/BF/BF3/BF320/style/index.scss
+++ b/src/views/BF/BF3/BF320/style/index.scss
@@ -6,22 +6,22 @@
   min-height: 700px;
 }
 
-::v-deep .dx-toolbar-after {
+:deep .dx-toolbar-after {
   display: flex;
 
   .dx-toolbar-item {
     &:first-child {
       order: 2;
-      margin-left: 15px;
+      margin-left: 5px;
     }
   }
 }
 
-::v-deep .dx-select-checkbox {
+:deep .dx-select-checkbox {
   display: inline-block !important;
 }
 
-::v-deep .dx-texteditor-input {
+:deep .dx-texteditor-input {
   min-height: 30px !important;
 }
 
@@ -100,8 +100,8 @@
 }
 
 
-::v-deep.components-modal-demo-position {
-  ::v-deep.test-local {
+:deep.components-modal-demo-position {
+  :deep.test-local {
     background-color: pink !important;
     width: 1000px !important;
     height: 200px !important;
