--- a/src/assets/styles/customStyle.scss
+++ b/src/assets/styles/customStyle.scss
@@ -13,6 +13,10 @@
   color: white !important;
 }
 
+.ant-form-item-label > label{
+  height: $common-height+px;
+}
+
 .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
   padding-bottom: 0px !important;
 }
