--- a/src/views/BF/BF3/BF310/style/style.scss
+++ b/src/views/BF/BF3/BF310/style/style.scss
@@ -3,24 +3,27 @@
     margin-top: 10px;
 }
 
-::v-deep .dx-toolbar-after {
+:deep .dx-toolbar-after {
     display: flex;
 
     .dx-toolbar-item {
         &:first-child {
             order: 2;
-            margin-left: 15px;
+            margin-left: 5px;
         }
     }
 }
-
+:deep .dx-button-content {
+    height: 28px;
+    padding: 6px;
+}
 
 
 .ant-select {
     width: 145px;
 }
 
-::v-deep .dx-button-text {
+:deep .dx-button-text {
     line-height: 0.5;
 }
 
@@ -86,11 +89,11 @@
     }
 }
 
-::v-deep .cell-center {
+:deep .cell-center {
     text-align: center !important
 }
 
-::v-deep .ant-pagination-options {
+:deep .ant-pagination-options {
     display: none;
 }
 
