--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -62,17 +62,7 @@
         }
     }
     .custom-grade-cell {
-        // display: flex;
-        // align-items: center;
-        line-height: 30px;
-        .custom-grade-cell-tag {
-            padding: 3px 10px;
-            border: 1px solid #304967;
-            margin-right: 10px;
-            border-radius: 5px;
-            min-width: 50px;
-            text-align: center;
-        }
+      margin: 3px 10px;
     }
     ::v-deep .active-row-key {
         background-color: #337AB7;
