--- a/src/views/PA/PA4/PA430/style/style.scss
+++ b/src/views/PA/PA4/PA430/style/style.scss
@@ -105,4 +105,11 @@
     ::v-deep .cell-center {
         text-align: center !important
     }
+
+    .bt-email-group :deep(.dx-button-content){
+      padding: 1px;
+    }
+    .bt-print-group :deep(.dx-button-content){
+      padding: 1px;
+    }
 }
