--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -143,3 +143,10 @@
     pointer-events: none;
     opacity: 0.8;
 }
+.action-select-1  :deep(.dx-button-content){
+  padding: 6px 15px;
+}
+
+.action-select-2  :deep(.dx-button-content){
+  padding: 6px 15px;
+}
