--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -8,6 +8,11 @@ label,
 table {
   font-size: $fontSize+px;
 }
+
+table tr td {
+  vertical-align: middle;
+}
+
 .page-content {
   padding: 2px 10px 10px;
 }
