create/click-out fix/pa-620

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -174,3 +174,9 @@ $lenght: 50;
 .custom-grade-cell {
   margin: 3px 10px;
 }
+
+.btn-date {
+  div.dx-button-content {
+    padding: 0px 10px 2px;
+  }
+}
