--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -117,11 +117,12 @@
   }
 
   :deep .month-custom-1 {
-    background-color: #a6a6a6;
+    background-color: #A6A6A6;
     padding-left: 10px;
     border-radius: 5px;
     margin-right: 10px;
     color: white;
+    width: fit-content;;
 
     .dp__input {
       color: white;
