fix-add-row-pa-120

--- a/src/views/BF/BF6/BF620/style/style.scss
+++ b/src/views/BF/BF6/BF620/style/style.scss
@@ -76,5 +76,9 @@
   :deep .custom-sumary {
     white-space: break-spaces;
   }
-
+  .btn-date {
+    div.dx-button-content {
+      padding: 0px 10px 2px;
+    }
+  }
 }
