--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -239,4 +239,9 @@
       padding: 0px 10px 2px;
     }
   }
+  .btn-date {
+    div.dx-button-content {
+      padding: 0px 10px 2px;
+    }
+  }
 }
