fix-calcu-debug-6-pa-120

--- a/src/views/PA/PA1/PA120/style/style.scss
+++ b/src/views/PA/PA1/PA120/style/style.scss
@@ -100,4 +100,11 @@
   table tr td {
     vertical-align: middle;
   }
+  :deep .tag-foreigner {
+    background-color: orange;
+    color: white;
+    padding: 3px 10px;
+    border-radius: 5px;
+    width: min-content;
+  }
 }
