--- a/src/views/BF/BF2/BF220/style/style.scss
+++ b/src/views/BF/BF2/BF220/style/style.scss
@@ -116,3 +116,9 @@
 .search {
     display: flex;
 }
+.ant-tag-yellow {
+  color: white;
+  background: goldenrod;
+  padding: 0px 12px;
+  border: 1px solid goldenrod;
+}
