--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -129,7 +129,9 @@ $lenght: 50;
   display: flex;
   align-items: center;
 }
-
+.justify-content-center {
+  justify-content: center;
+}
 .text-center {
   text-align: center;
 }
@@ -174,4 +176,6 @@ $lenght: 50;
 .custom-grade-cell {
   margin: 3px 10px;
 }
-
+.dx-button-ghost {
+  border: none;
+}
