--- a/src/views/PA/PA1/PA120/style/style.scss
+++ b/src/views/PA/PA1/PA120/style/style.scss
@@ -21,8 +21,7 @@
       }
     }
   }
-  ::v-deep .custom-layout {
-    padding: 10px 10px 10px 0;
+  :deep .custom-layout {
 
     > div {
       border: 1px solid #d7d7d7;
@@ -87,7 +86,7 @@
       text-align: center;
     }
   }
-  ::v-deep .active-row-key {
+  :deep .active-row-key {
     background-color: #337ab7;
     color: white;
   }
