--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -136,106 +136,114 @@
         height: 35px;
         padding: 0 5px;
     }
-}
-
-.button-open-tab {
-    height: 100%;
-    // padding-bottom: 7px;
-    width: 100px;
-}
-
-.custom-select-tab {
-    color: white;
-    background-color: blue;
-    font-size: 10px;
-    border: none;
-    border-radius: 5px;
-    // padding: 5px 10px;
-}
-
-::v-deep .dx-datagrid-text-content {
-    white-space: pre-wrap;
-}
-:deep .dx-button-content {
-  padding: 5px;
-  display: inline-flex;
-  align-items: center;
-}
-:deep .custom-button-checkbox {
-    border: 1px solid blue;
-    span {
-        color: blue;
+    .button-open-tab {
+        height: 100%;
+        // padding-bottom: 7px;
+        width: 100px;
     }
-}
-
-.custom-select-tab {
-    color: white;
-    background-color: blue;
-    border: none;
-    border-radius: 5px;
-    display: inline-flex;
-    align-items: center;
-    // height: 91.5%;
-}
-
-.button-open-tab {
-    color: #fff;
-    background-color: #00f;
-    font-size: 12px;
-    border: none;
-    border-radius: 5px;
-    margin-left: 3px;
-    cursor: pointer;
-    height: 100%;
-    width: 100px;
-}
-
-.custom-button-delete {
-    cursor: pointer;
-    // background-color: red;
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 1px solid gray;
-}
-
-.title-action {
-    border: 1px solid #d7d7d7;
-    padding: 10px;
-    width: 100%;
-    justify-content: space-between;
-}
-
-::v-deep .custom-layout {
-    padding: 10px 10px 10px 0;
-
-    >div {
+    
+    .custom-select-tab {
+        color: white;
+        background-color: blue;
+        font-size: 10px;
+        border: none;
+        border-radius: 5px;
+        // padding: 5px 10px;
+    }
+    
+    ::v-deep .dx-datagrid-text-content {
+        white-space: pre-wrap;
+    }
+    :deep .dx-button-content {
+      padding: 5px;
+      display: inline-flex;
+      align-items: center;
+    }
+    :deep .custom-button-checkbox {
+        border: 1px solid blue;
+        span {
+            color: blue;
+        }
+    }
+    
+    .custom-select-tab {
+        color: white;
+        background-color: blue;
+        border: none;
+        border-radius: 5px;
+        display: inline-flex;
+        align-items: center;
+        // height: 91.5%;
+    }
+    
+    .button-open-tab {
+        color: #fff;
+        background-color: #00f;
+        font-size: 12px;
+        border: none;
+        border-radius: 5px;
+        margin-left: 3px;
+        cursor: pointer;
+        height: 100%;
+        width: 100px;
+    }
+    
+    .custom-button-delete {
+        cursor: pointer;
+        // background-color: red;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border: 1px solid gray;
+    }
+    
+    .title-action {
         border: 1px solid #d7d7d7;
         padding: 10px;
-        height: 100%;
+        width: 100%;
+        justify-content: space-between;
     }
-}
-
-::v-deep .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
-    padding-bottom: 0px !important;
-}
-:deep table tr td {
-  vertical-align: middle;
-}
-
-:deep .custom-layout {
-  .custom-grade-cell{
-    padding: 0;
-    margin: 0;
-    .custom-grade-cell-tag {
-      padding: 1px 10px;
+    
+    ::v-deep .custom-layout {
+        padding: 10px 10px 10px 0;
+    
+        >div {
+            border: 1px solid #d7d7d7;
+            padding: 10px;
+            height: 100%;
+        }
     }
-  }
-  .dx-button-content {
-    padding: 0px 10px 2px;
-  }
-}
-.btn-date {
-  div.dx-button-content {
-    padding: 0px 10px 2px;
-  }
+    
+    ::v-deep .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
+        padding-bottom: 0px !important;
+    }
+    :deep table tr td {
+      vertical-align: middle;
+    }
+    
+    :deep .custom-layout {
+      .custom-grade-cell{
+        padding: 0;
+        margin: 0;
+        .custom-grade-cell-tag {
+          padding: 1px 10px;
+        }
+      }
+      div.dx-button-content {
+        padding: 0px 10px 2px;
+      }
+    }
+    :deep div.dx-button-content {
+      .dx-dropdowneditor-icon {
+        width: 24px;
+      }
+    
+      .dx-dropdowneditor-icon::before {
+        margin-left: -4px;
+      }
+    }
+    :deep .btn-date {
+      div.dx-button-content {
+        padding: 0px 10px 0px;
+      }
+    }
 }
