--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -183,3 +183,9 @@ $lenght: 50;
 .dx-button-ghost {
   border: none;
 }
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
