--- a/src/views/PA/PA8/PA810/styles/index.scss
+++ b/src/views/PA/PA8/PA810/styles/index.scss
@@ -1,5 +1,3 @@
-#pa-810 {}
-
 .form-modal {
   .item-group {
     margin-top: 10px;
@@ -39,5 +37,51 @@
       align-items: center;
       margin-bottom: 2px;
     }
+  }
+}
+.flex {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid {
+  display: grid;
+  gap: 2px;
+  min-height: 120px;
+  text-align: center;
+  .header {
+    height: 100%;
+    color: white;
+    font-size: 13px;
+    font-weight: bold;
+    background-color: rgb(91, 128, 185) !important;
+  }
+  div {
+    min-height: 30px;
+  }
+}
+.bg-gray {
+  background-color:  rgb(233, 236, 243);
+}
+
+.justify-items-center {
+  justify-items: center;
+}
+.items-center {
+  align-items: center;
+}
+
+@for $i from 1 through 12 {
+  .grid-cols-#{$i} {
+    grid-template-columns: repeat($i, minmax(0, $i+ fr));
+  }
+  .row-span-#{$i} {
+    grid-row: span $i / span $i;
+
+  }
+  .col-span-#{$i} {
+    grid-column: span $i / span $i;
   }
 }
