--- a/src/assets/styles/customStyle.scss
+++ b/src/assets/styles/customStyle.scss
@@ -21,9 +21,9 @@
 .ant-form-item-control-input {
   min-height: $min-height+px;
 }
-.ant-tooltip-inner {
-  color: white !important;
-}
+// .ant-tooltip-inner {
+//   color: white !important;
+// }
 
 .ant-form-item-label > label{
   height: $common-height+px;
