--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -27,15 +27,15 @@
         }
     }
 
-    ::v-deep .active-row-key {
+    :deep .active-row-key {
         background-color: #337AB7;
         color: white;
     }
 
-    // ::v-deep .table-detail .dx-datagrid-headers {
+    // :deep .table-detail .dx-datagrid-headers {
     //     display: none;
     // }
-    ::v-deep .dx-master-detail-cell {
+    :deep .dx-master-detail-cell {
         padding: 0px;
     }
 
@@ -68,7 +68,7 @@
         text-decoration: underline;
     }
 
-    ::v-deep .form-action {
+    :deep .form-action {
         label {
             width: 120px;
         }
@@ -108,7 +108,7 @@
         }
     }
 
-    ::v-deep .month-custom-2 {
+    :deep .month-custom-2 {
         background-color: black;
         padding-left: 10px;
         border-radius: 5px;
@@ -151,7 +151,7 @@
         // padding: 5px 10px;
     }
     
-    ::v-deep .dx-datagrid-text-content {
+    :deep .dx-datagrid-text-content {
         white-space: pre-wrap;
     }
     :deep .dx-button-content {
@@ -203,7 +203,7 @@
         justify-content: space-between;
     }
     
-    ::v-deep .custom-layout {
+    :deep .custom-layout {
         padding: 10px 10px 10px 0;
     
         >div {
@@ -213,7 +213,7 @@
         }
     }
     
-    ::v-deep .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
+    :deep .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
         padding-bottom: 0px !important;
     }
     :deep table tr td {
@@ -245,5 +245,8 @@
       div.dx-button-content {
         padding: 0px 10px 0px;
       }
+    }
+    :deep .dx-datagrid-rowsview .dx-row-focused.dx-data-row>td:not(.dx-focused) {
+      color: black;
     }
 }
