--- a/src/views/BF/BF2/BF220/style/popupAdd/index.scss
+++ b/src/views/BF/BF2/BF220/style/popupAdd/index.scss
@@ -158,3 +158,8 @@
   display: flex;
   justify-content: center;
 }
+.ant-tag-yellow {
+  color: white;
+  background: goldenrod;
+  border: 1px solid goldenrod;
+}
