--- a/src/views/BF/BF2/BF220/style/popupEdit/index.scss
+++ b/src/views/BF/BF2/BF220/style/popupEdit/index.scss
@@ -161,3 +161,8 @@
 ::v-deep .ant-col.ant-form-item-label label {
   float: left;
 }
+.ant-tag-yellow {
+  color: white;
+  background: goldenrod;
+  border: 1px solid goldenrod;
+}
