--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -150,3 +150,7 @@
 .action-select-2  :deep(.dx-button-content){
   padding: 6px 15px;
 }
+.formPA510 {
+    border: 1px solid #d7d7d7;
+    padding: 10px;
+}
