pa-720/change-design

--- a/src/views/PA/PA1/PA120/style/popupAddNew.scss
+++ b/src/views/PA/PA1/PA120/style/popupAddNew.scss
@@ -17,6 +17,14 @@
             font-size: 12px;
         }
     }
+    .long-text {
+      align-items: start;
+      padding-top: 3px;
+    }
+    :deep .d-flex-nowrap {
+      display: flex;
+      flex-wrap: nowrap;
+    }
 
     ::v-deep .label-red {
         label {
