--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -176,6 +176,10 @@ $lenght: 50;
 .custom-grade-cell {
   margin: 3px 10px;
 }
+
+.money-column {
+  text-align: right !important;
+}
 .dx-button-ghost {
   border: none;
 }
