--- a/src/views/PA/PA1/PA110/style/styleForm.scss
+++ b/src/views/PA/PA1/PA110/style/styleForm.scss
@@ -117,9 +117,9 @@
     }
 
     .deduction-main {
-        max-height: 200px;
+        // max-height: 200px;
         overflow: scroll;
-        border: 1px solid #ddd;
+        // border: 1px solid #ddd;
         padding-left: 5px;
         padding-top: 5px;
     }
