--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -92,9 +92,9 @@
 }
 
 .deduction-main {
-    max-height: 200px;
+    // max-height: 200px;
     overflow: scroll;
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     padding-left: 5px;
     padding-top: 5px;
 }
