--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -189,3 +189,7 @@ $lenght: 50;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.column-focus {
+  background-color: #5c95c5;
+  color: black;
+}
