Hieupv/fix pa810 (#1526) (#1527)
* fix bug PA 410

* fix bug when confirm then popup visiable true

fix bug add row and update

fix logic bug add row in 610

fix ui pa 810

fix ui

fix ui

* fix ui pa810

---------

Co-authored-by: dungtv <dungtv@townsoftvina.com>
Co-authored-by: dungtv1291 <112230409+dungtv1291@users.noreply.github.com>
Co-authored-by: hieupv <hieupv2412@gmail.com>

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -132,6 +132,9 @@ $lenght: 50;
 .justify-content-center {
   justify-content: center;
 }
+.justify-content-end {
+  justify-content: flex-end;
+}
 .text-center {
   text-align: center;
 }
