Hieupv/fix pa810 (#1531)
* fix show field dependent

* update ui

---------

Co-authored-by: hieupv <hieupv2412@gmail.com>

--- a/src/views/PA/PA8/PA810/styles/index.scss
+++ b/src/views/PA/PA8/PA810/styles/index.scss
@@ -45,7 +45,13 @@
   align-items: center;
   justify-content: center;
 }
-
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.gap-1 {
+  gap: 4px;
+}
 .grid {
   display: grid;
   gap: 2px;
