--- a/src/views/BF/BF3/BF330/style/style.scss
+++ b/src/views/BF/BF3/BF330/style/style.scss
@@ -27,7 +27,7 @@
 
 :deep .dx-button-content {
     height: 28px;
-    padding: 6px;
+    // padding: 6px;
 }
 #data-grid-demo {
     min-height: 700px;
