update ui and search data bf-610 (#1548)
* fix logic enter input

* update ui bf610

* fix header table tab  2 page bf-650

* remove auto focus row table page ac-610

* update ui and search data

---------

Co-authored-by: hieupv <hieupv2412@gmail.com>

--- a/src/views/BF/BF6/BF610/style/style.scss
+++ b/src/views/BF/BF6/BF610/style/style.scss
@@ -1,9 +1,7 @@
 #bf-610 {
 
     :deep .custom-checkbox1 .dx-checkbox-text,
-    :deep .custom-checkbox2 .dx-checkbox-text,
-    :deep .custom-checkbox3 .dx-checkbox-text,
-    :deep .custom-checkbox4 .dx-checkbox-text {
+    :deep .custom-checkbox2 .dx-checkbox-text {
         margin-left: 5px;
         padding: 1px 20px;
         color: white;
@@ -11,20 +9,13 @@
     }
 
     :deep .custom-checkbox1 .dx-checkbox-text {
-        background-color: #346CB0;
-    }
-
-    :deep .custom-checkbox2 .dx-checkbox-text {
         background-color: #376092;
     }
 
-    :deep .custom-checkbox3 .dx-checkbox-text {
-        background-color: #BE4B48;
+    :deep .custom-checkbox2 .dx-checkbox-text {
+        background-color: #C00000;
     }
 
-    :deep .custom-checkbox4 .dx-checkbox-text {
-        background-color: #953735;
-    }
 
     :deep .search-form {
         .clr label {
@@ -86,6 +77,12 @@
     }
     .showO {
         font-size: 20px;
+    }
+    .closing-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+        margin-bottom: 10px;
     }
 
 }
