--- a/src/views/PA/PA1/PA110/style/style.scss
+++ b/src/views/PA/PA1/PA110/style/style.scss
@@ -130,3 +130,6 @@
 .custom-detail {
     text-align: right;
 }
+:deep .dx-datagrid-table .dx-row .dx-command-expand.dx-datagrid-group-space {
+    padding-top: 4px;
+}
