pa-120-620-fix-ui

--- a/src/views/BF/BF6/BF620/style/searchArea.scss
+++ b/src/views/BF/BF6/BF620/style/searchArea.scss
@@ -47,6 +47,9 @@
     :deep .dx-checkbox-container {
       margin-left: 10px;
     }
+    :deep .dx-radiogroup{
+      margin-left: 15px;
+    }
   }
   .search-production {
     margin-right: 30px;
