--- a/src/views/PA/PA1/PA110/style/styleForm.scss
+++ b/src/views/PA/PA1/PA110/style/styleForm.scss
@@ -43,25 +43,13 @@
         }
     }
 
-    // .header-text-3 {
-    //     background-color: #558ED5;
-    //     padding: 5px;
-    //     font-weight: bold;
-    //     font-size: 18px;
-    //     margin-bottom: 10px;
-
-    //     span {
-    //         display: flex;
-    //         align-items: center;
-    //         font-size: 13px;
-    //         color: white;
-    //         float: right;
-
-    //         p {
-    //             margin: 5px 0px 3px 10px;
-    //         }
-    //     }
-    // }
+    .header-text-3 {
+        background-color: #558ED5;
+        padding: 5px;
+        font-weight: bold;
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
 
     // .ins-dedu {
     //     display: flex;
