pa-720-620/dis-btn-del-edit bf-620-change-api

--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -263,4 +263,15 @@
         color: red;
       }
     }
+    :deep .btn-container {
+      margin-right: 5px;
+      text-align: center;
+      border: 1px solid rgb(164, 164, 164);
+      border-radius: 5px;
+      padding: 3px 4px;
+      height: 25px;
+    }
+    :deep .dx-command-expand.dx-datagrid-group-space{
+      padding: 0;
+    }
 }
