--- a/src/views/PA/PA1/PA110/style/style.scss
+++ b/src/views/PA/PA1/PA110/style/style.scss
@@ -16,11 +16,11 @@
         }
        
     }
-    .top-content {
-        margin-bottom: 10px;
-        padding: 2px 4px;
+    // .top-content {
+    //     margin-bottom: 10px;
+    //     padding: 2px 4px;
         
-    }
+    // }
     .input-text {
         display: flex;
         align-items: center;
@@ -29,13 +29,13 @@
             margin: 0px 10px 0 0px;
         }
     }
-    .header-text-3 {
-		background-color: #558ED5;
-		padding: 5px;
-		font-weight: bold;
-		font-size: 12px;
-		margin-bottom: 10px;
-    }
+    // .header-text-3 {
+	// 	background-color: #558ED5;
+	// 	padding: 5px;
+	// 	font-weight: bold;
+	// 	font-size: 12px;
+	// 	margin-bottom: 10px;
+    // }
 
     :deep .custom-layout {
         padding: 10px 10px 10px 0;
@@ -49,13 +49,13 @@
         margin-left: 3px;
     }
 
-    .custom-note {
-        >span {
-            font-size: 11px;
-            color: #666666;
-            padding-left: 5px;
-        }
-    }
+    // .custom-note {
+    //     >span {
+    //         font-size: 11px;
+    //         color: #666666;
+    //         padding-left: 5px;
+    //     }
+    // }
 
     .custom-grade-cell {
         display: flex;
