--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -31,13 +31,13 @@
         }
     }
 
-    .header-text-3 {
-        background-color: #558ED5;
-        padding: 5px;
-        font-weight: bold;
-        font-size: 12px;
-        margin-bottom: 10px;
-    }
+    // .header-text-3 {
+    //     background-color: #558ED5;
+    //     padding: 5px;
+    //     font-weight: bold;
+    //     font-size: 12px;
+    //     margin-bottom: 10px;
+    // }
 
     :deep .custom-layout {
         padding: 10px 10px 10px 0;
@@ -57,13 +57,13 @@
         margin-left: 3px;
     }
 
-    .custom-note {
-        >span {
-            font-size: 11px;
-            color: #666666;
-            padding-left: 5px;
-        }
-    }
+    // .custom-note {
+    //     >span {
+    //         font-size: 11px;
+    //         color: #666666;
+    //         padding-left: 5px;
+    //     }
+    // }
 
     .custom-grade-cell {
         display: flex;
