pa-720/save-row-to-new-row

--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -266,6 +266,7 @@
     border-radius: 5px;
     padding: 3px 4px;
     height: 25px;
+    background: white;
   }
   :deep .dx-command-expand.dx-datagrid-group-space{
     padding: 0;
