--- a/src/views/BF/BF6/BF610/style/style.scss
+++ b/src/views/BF/BF6/BF610/style/style.scss
@@ -12,6 +12,7 @@
 
     :deep(.custom-checkbox1 .dx-checkbox-text) {
       background-color: #376092;
+      box-shadow: rgba(0, 0, 0, 0.384) 0px 0px 10px 4px;
       border: 3px solid rgba(255, 255, 255, 0);
     }
     :deep(.custom-checkbox2 .dx-checkbox-text) {
@@ -21,6 +22,7 @@
 
     :deep .custom-checkbox3 .dx-checkbox-text {
       border: 3px solid rgba(255, 255, 255, 0);
+      box-shadow: rgba(0, 0, 0, 0.384) 0px 0px 10px 4px;
       background-color: #C00000;
     }
     :deep .custom-checkbox4 .dx-checkbox-text {
