--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -45,7 +45,9 @@
             }
         }
     }
-
+    #gridContainer {
+      height: 730px;
+    }
     ::v-deep .custom-layout {
         padding: 10px 10px 10px 0;
         >div {
