--- a/src/views/PA/PA7/PA710/style/style.scss
+++ b/src/views/PA/PA7/PA710/style/style.scss
@@ -2,6 +2,9 @@
     .confirm {
         color: red;
     }
+    #gridContainer {
+        max-height: 700px;
+    }
 
     margin-top: 10px;
     // padding: 10px 10px 10px 0;
@@ -94,4 +97,8 @@
 
 .button-form-modal {
     margin: 0px 5px;
+}
+.disabledBlock {
+    pointer-events: none;
+    opacity: 0.8;
 }
